; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/virt/kvm/extr_kvm_main.c_gfn_to_hva.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/virt/kvm/extr_kvm_main.c_gfn_to_hva.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm = type { i32 }
%struct.kvm_memory_slot = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @gfn_to_hva(%struct.kvm* %0, i32 %1) #0 {
  %3 = alloca %struct.kvm*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.kvm_memory_slot*, align 8
  store %struct.kvm* %0, %struct.kvm** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.kvm*, %struct.kvm** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @unalias_gfn_instantiation(%struct.kvm* %6, i32 %7)
  store i32 %8, i32* %4, align 4
  %9 = load %struct.kvm*, %struct.kvm** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call %struct.kvm_memory_slot* @gfn_to_memslot_unaliased(%struct.kvm* %9, i32 %10)
  store %struct.kvm_memory_slot* %11, %struct.kvm_memory_slot** %5, align 8
  %12 = load %struct.kvm_memory_slot*, %struct.kvm_memory_slot** %5, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i64 @__gfn_to_hva(%struct.kvm_memory_slot* %12, i32 %13)
  ret i64 %14
}

declare dso_local i32 @unalias_gfn_instantiation(%struct.kvm*, i32) #1

declare dso_local %struct.kvm_memory_slot* @gfn_to_memslot_unaliased(%struct.kvm*, i32) #1

declare dso_local i64 @__gfn_to_hva(%struct.kvm_memory_slot*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
